scripts/kubernetes/gis/geoserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geoserver
  namespace: gis
  labels:
    app: geoserver
    service: geoserver
spec:
  type: NodePort
  selector:
    service: geoserver
  ports:
    - name: "9124"
      protocol: TCP
      port: 9124
      targetPort: 8080
      nodePort: 32118
