scripts/kubernetes/gis/gismap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gismap
  namespace: gis
  labels:
    app: gismap
    service: gismap
spec:
  type: NodePort
  selector:
    service: gismap
  ports:
    - name: "9228"
      protocol: TCP
      port: 9228
      targetPort: 80
      nodePort: 32124
