scripts/kubernetes/gis/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: gis
  labels:
    app: postgres
    service: postgres 
spec:
  type: NodePort
  selector:
    service: postgres
  ports:
    - name: "9048"
      protocol: TCP
      port: 9048
      targetPort: 5432
      nodePort: 32116
