scripts/kubernetes/gis/gis-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gis-ingress
  namespace: gis
  annotations:
    kubernetes.io/ingress.class: "haproxy"
spec:
  rules:
  - host: savaproject.com
    http:
      paths:
      - path: /geoserver
        pathType: Prefix
        backend:
          service:
            name: geoserver
            port: 
              number: 9124
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: gisapi
            port: 
              number: 9126
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gismap
            port: 
              number: 9228
